discussion/kv_engine/156529/156529_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: If42bca909b0e7207213dbefd76fa09def27ab931

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-09-02 08:38:46.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-02 09:07:12.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11923/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11923/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11923/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1583/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1583/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13769/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39346/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33508/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10706/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1566/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12680/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14198/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13534/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21709/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
